Redirects/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect
  labels:
    app: redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirect
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: redirect
    spec:
      containers:
      - name: redirect
        image: romeo7/trim_redirect
