Redirects/manifests/redirectservice.yaml
kind: Service
apiVersion: v1
metadata:
  name:  redirect
spec:
  selector:
    app:  redirect
  type: ClusterIP
  ports:
  - name:  redirect-port
    port:  5000
    targetPort:  5000
