Redirects/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  redirect
spec:
  selector:
    app:  redirect
  type: ClusterIP
  ports:
  - port:  7000
    targetPort:  7000
    protocol: TCP
